ignore some screenshots from FTP

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 *.zip
+Connected but timing out.png
+FTP Timeout.png
+FTP Timeout 2.png
+FTP Login.png
